--- a/PENGUJIAN_MODEL.ipynb
+++ b/PENGUJIAN_MODEL.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOgmVTIXx569d7/M4Ql3s+K",
+      "authorship_tag": "ABX9TyN3fC06D3+ohVriOCxjLOFN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "XlsNI_0j-V1L",
-        "outputId": "8c6e05fd-422c-4eaa-921c-7281b425fa59"
+        "outputId": "41072e10-52b9-4b3f-ce3d-6e734e36eaf1"
       },
       "outputs": [
         {
@@ -44,7 +44,7 @@
             "Collecting z3-solver\n",
             "  Downloading z3_solver-4.15.0.0-py3-none-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (602 bytes)\n",
             "Downloading z3_solver-4.15.0.0-py3-none-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (29.5 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m29.5/29.5 MB\u001b[0m \u001b[31m19.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m29.5/29.5 MB\u001b[0m \u001b[31m25.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hInstalling collected packages: z3-solver\n",
             "Successfully installed z3-solver-4.15.0.0\n"
           ]
@@ -69,7 +69,7 @@
         "\n",
         "Actions, (R, C, U, D, Impersonate) = EnumSort(\"Action\", [\"R\", \"C\", \"U\", \"D\", \"Impersonate\"])\n",
         "\n",
-        "Resources, (\n",
+        "Objects, (\n",
         "    User, Customer, MeterReading, Bill, Permission, Role, Role_Perm,\n",
         "    Journal, COA, FinancialReport, HousingArea,\n",
         "    R_Superadmin, R_Direktur, R_Finance, R_Kasir, R_Resepsionis, R_Pegawai_Lapangan, R_Pelanggan,\n",
@@ -81,10 +81,16 @@
         "    \"None\"\n",
         "])\n",
         "\n",
+        "# === User constants as EnumSort ===\n",
+        "Users, (u1, u2, u3, u4, u5, u6, u7, u8, u9, u10, u11, u12) = EnumSort(\"User\", [\n",
+        "    \"u1\", \"u2\", \"u3\", \"u4\", \"u5\", \"u6\", \"u7\", \"u8\", \"u9\", \"u10\", \"u11\", \"u12\"\n",
+        "])\n",
+        "\n",
         "\n",
         "# === Step 2: Function untuk permission dan inheritance ===\n",
-        "has_permission = Function(\"has_permission\", Roles, Actions, Resources, BoolSort())\n",
+        "has_permission = Function(\"has_permission\", Roles, Actions, Objects, BoolSort())\n",
         "inherits = Function(\"inherits\", Roles, Roles, BoolSort())\n",
+        "has_role = Function(\"has_role\", Users, Roles, BoolSort())\n",
         "\n",
         "# === Step 3: Mapping string ke enum (biar gampang parsing) ===\n",
         "role_map = {\n",
@@ -92,7 +98,7 @@
         "    \"Kasir\": Kasir, \"Resepsionis\": Resepsionis, \"Pegawai_Lapangan\": Pegawai_Lapangan, \"Pelanggan\": Pelanggan\n",
         "}\n",
         "action_map = {\"R\": R, \"C\": C, \"U\": U, \"D\": D, \"Impersonate\": Impersonate}\n",
-        "resource_map = {\n",
+        "object_map = {\n",
         "    \"User\": User, \"Customer\": Customer, \"MeterReading\": MeterReading, \"Bill\": Bill,\n",
         "    \"Permission\": Permission, \"Role\": Role, \"Role_Perm\": Role_Perm,\n",
         "    \"Journal\": Journal, \"COA\": COA, \"FinancialReport\": FinancialReport,\n",
@@ -100,6 +106,9 @@
         "    \"Superadmin\": R_Superadmin, \"Direktur\": R_Direktur, \"Finance\": R_Finance,\n",
         "    \"Kasir\": R_Kasir, \"Resepsionis\": R_Resepsionis,\n",
         "    \"Pegawai_Lapangan\": R_Pegawai_Lapangan, \"Pelanggan\": R_Pelanggan\n",
+        "}\n",
+        "user_map = {\n",
+        "    \"u1\": u1, \"u2\": u2, \"u3\": u3, \"u4\": u4, \"u5\": u5, \"u6\": u6, \"u7\": u7, \"u8\": u8, \"u9\": u9, \"u10\": u10, \"u11\": u11, \"u12\": u12\n",
         "}\n",
         "\n",
         "# === Step 4: Masukkan fakta dari hasil kamu tadi ===\n",
@@ -109,7 +118,7 @@
         "\n",
         "def perm_tuple(p):\n",
         "    act, res = map(str.strip, p.split(\",\"))\n",
-        "    return action_map[act], resource_map.get(res, NoneResource)\n",
+        "    return action_map[act], object_map.get(res, NoneResource)\n",
         "\n",
         "role_perms = {\n",
         "    \"Superadmin\": [\n",
@@ -133,13 +142,13 @@
         "# Masukkan permission ke dalam Z3\n",
         "roles = list(role_map.values())\n",
         "actions = list(action_map.values())\n",
-        "resources = list(resource_map.values())\n",
-        "\n"
+        "objects = list(object_map.values())\n",
+        "users = list(user_map.values())\n"
       ],
       "metadata": {
         "id": "kn6nEiv3GCMR"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -179,7 +188,7 @@
       "metadata": {
         "id": "R1-tGqLCfSik"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -200,7 +209,7 @@
         "print(\"\\n🔒 Menambahkan constraint: default semua permission yang tidak didefinisikan harus False\")\n",
         "for r in roles:\n",
         "    for a in actions:\n",
-        "        for res in resources:\n",
+        "        for res in objects:\n",
         "            if (r, a, res) not in defined_perms:\n",
         "                s.add(has_permission(r, a, res) == False)\n",
         "\n",
@@ -218,9 +227,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5awMJc5m8pIa",
-        "outputId": "6bd4af03-d48f-48a7-83ee-a130695e12da"
+        "outputId": "26af8026-b811-48d5-84a8-39d3563e48c2"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -236,58 +245,49 @@
     {
       "cell_type": "code",
       "source": [
-        "users = [Const(f\"user_{i}\", Roles) for i in range(12)]\n",
-        "\n",
         "s.push()\n",
         "\n",
-        "# === Step 3: Fakta role assignment ===\n",
-        "s.add(users[0] == Superadmin)        # 1 Superadmin\n",
-        "s.add(users[1] == Direktur)          # 1 Direktur\n",
-        "s.add(users[2] == Finance)           # 2 Finance\n",
-        "s.add(users[3] == Finance)\n",
-        "s.add(users[4] == Kasir)             # 2 Kasir\n",
-        "s.add(users[5] == Kasir)\n",
-        "s.add(users[6] == Resepsionis)       # 2 Resepsionis\n",
-        "s.add(users[7] == Resepsionis)\n",
-        "s.add(users[8] == Pegawai_Lapangan)  # 2 Pegawai Lapangan\n",
-        "s.add(users[9] == Pegawai_Lapangan)\n",
-        "s.add(users[10] == Pelanggan)        # 2 Pelanggan\n",
-        "s.add(users[11] == Pelanggan)\n",
+        "# for u in users:\n",
+        "#     s.add(Sum([If(has_role(u, r), 1, 0) for r in roles]) == 1)\n",
+        "\n",
+        "# Example assignments (customize as needed)\n",
+        "s.add(has_role(u1, Superadmin) == True)\n",
+        "s.add(has_role(u2, Direktur) == True)\n",
+        "s.add(has_role(u3, Finance) == True)\n",
+        "s.add(has_role(u4, Finance) == True)\n",
+        "s.add(has_role(u5, Kasir) == True)\n",
+        "s.add(has_role(u6, Kasir) == True)\n",
+        "s.add(has_role(u7, Resepsionis) == True)\n",
+        "s.add(has_role(u8, Resepsionis) == True)\n",
+        "s.add(has_role(u9, Pegawai_Lapangan) == True)\n",
+        "s.add(has_role(u10, Pegawai_Lapangan) == True)\n",
+        "s.add(has_role(u11, Pelanggan) == True)\n",
+        "s.add(has_role(u12, Pelanggan) == True)\n",
+        "\n",
+        "for u in users:\n",
+        "    s.add(Sum([If(has_role(u, r), 1, 0) for r in roles]) == 1)\n",
+        "\n",
+        "# s.add(Sum([If(has_role(u12, r), 1, 0) for r in roles]) == 1)\n",
         "\n",
         "if s.check() == sat:\n",
-        "    m = s.model()\n",
-        "    print(\"✅ Fakta role assignment:\")\n",
-        "    for i in range(len(users)):\n",
-        "        print(f\"User {i+1}: {m[users[i]]}\")\n",
+        "    print(\"✅ Passed: Semua user memiliki role yang valid.\")\n",
         "else:\n",
-        "    print(\"❌ Tidak bisa assign role dengan fakta tersebut.\")"
+        "    print(\"❌ Failed: Ada user dengan role tidak valid.\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "P1PNfB8bL3YH",
-        "outputId": "5f1a698b-8533-42de-c180-92f8b7d0b1f4"
+        "id": "QlJ_51QCmC3I",
+        "outputId": "cc9bef70-5453-4fe9-e555-8b508c28a395"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "✅ Fakta role assignment:\n",
-            "User 1: Superadmin\n",
-            "User 2: Direktur\n",
-            "User 3: Finance\n",
-            "User 4: Finance\n",
-            "User 5: Kasir\n",
-            "User 6: Kasir\n",
-            "User 7: Resepsionis\n",
-            "User 8: Resepsionis\n",
-            "User 9: Pegawai_Lapangan\n",
-            "User 10: Pegawai_Lapangan\n",
-            "User 11: Pelanggan\n",
-            "User 12: Pelanggan\n"
+            "✅ Passed: Semua user memiliki role yang valid.\n"
           ]
         }
       ]
@@ -326,56 +326,19 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "015cce1c-4432-40de-e749-bdb407502d44"
+        "outputId": "3e084b9a-9a89-41fb-9cbd-617bcfcf7889"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "\n",
-            " OP_08\n",
+            " SOD_01\n",
             "\n",
             "🔍 Checking constraint: Tidak boleh ada role apa pun yang memiliki dua atau lebih dari permission {C, MeterReading}, {C, Bill}, dan {C, Journal}\n",
             "✅ Passed: Tidak ada role yang memiliki dua atau lebih permission tersebut secara bersamaan.\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print(\"\\n SOD_02\")\n",
-        "print(\"\\n🔍 Checking constraint: setiap user hanya satu role (valid role)\")\n",
-        "s.push()\n",
-        "for u in users:\n",
-        "    s.add(Or(u == Superadmin, u == Direktur, u == Finance, u == Kasir,\n",
-        "             u == Resepsionis, u == Pegawai_Lapangan, u == Pelanggan))\n",
-        "if s.check() == sat:\n",
-        "    print(\"✅ Passed: Semua user memiliki role yang valid.\")\n",
-        "else:\n",
-        "    print(\"❌ Failed: Ada user dengan role tidak valid.\")\n",
-        "s.pop()"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "IeDyGPWwVYpp",
-        "outputId": "849e1d90-4509-42b8-f898-3996a4ebc14c"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\n",
-            " SOD_02\n",
-            "\n",
-            "🔍 Checking constraint: setiap user hanya satu role (valid role)\n",
-            "✅ Passed: Semua user memiliki role yang valid.\n"
           ]
         }
       ]
@@ -388,7 +351,7 @@
         "print(\"\\n🔍 Checking constraint: hanya satu Superadmin\")\n",
         "s.push()\n",
         "\n",
-        "count_superadmin = Sum([If(users[i] == Superadmin, 1, 0) for i in range(len(users))])\n",
+        "count_superadmin = Sum([If(has_role(u, Superadmin), 1, 0) for u in users])\n",
         "s.add(count_superadmin == 1)\n",
         "if s.check() == sat:\n",
         "    print(\"✅ Passed: Hanya satu Superadmin.\")\n",
@@ -401,9 +364,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5BpI56jyVj_c",
-        "outputId": "e4f3cad7-d668-43d3-8636-ad06c7d6dec0"
+        "outputId": "24351ad8-8842-476e-ac64-3c178509f20d"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -420,19 +383,46 @@
     },
     {
       "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tsag9cu5v5cl",
+        "outputId": "3bf05986-bce8-49bd-a3a4-954b68039f08"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            " CA_02\n",
+            "\n",
+            "🔍 Checking constraint: tiap role minimal satu user\n",
+            "❌ Failed: Ada role yang tidak dimiliki oleh user mana pun.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [
         "# === Constraint Debug Check: Tiap role minimal satu user ===\n",
         "print(\"\\n CA_02\")\n",
         "print(\"\\n🔍 Checking constraint: tiap role minimal satu user\")\n",
         "\n",
         "s.push()\n",
-        "roles = [Superadmin, Direktur, Finance, Kasir, Resepsionis, Pegawai_Lapangan, Pelanggan]\n",
         "\n",
         "for role in roles:\n",
-        "    count = Sum([If(user == role, 1, 0) for user in users])\n",
+        "    count = Sum([If(has_role(user, role), 1, 0) for user in users])\n",
+        "    m = s.model()\n",
+        "    print(\"role \", role ,\" evaluate \", m.evaluate(count))\n",
         "    s.add(count >= 1)\n",
         "\n",
         "if s.check() == sat:\n",
+        "    model = s.model()\n",
         "    print(\"✅ Passed: Semua role dimiliki minimal oleh satu user.\")\n",
         "else:\n",
         "    print(\"❌ Failed: Ada role yang tidak dimiliki oleh user mana pun.\")\n",
@@ -443,9 +433,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "A64lA3bYMMZK",
-        "outputId": "4e021e90-61fc-4581-ff97-3989fa99be27"
+        "outputId": "24d2cabd-b291-489f-fe48-35f99ff99642"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -455,6 +445,13 @@
             " CA_02\n",
             "\n",
             "🔍 Checking constraint: tiap role minimal satu user\n",
+            "role  Superadmin  evaluate  1\n",
+            "role  Direktur  evaluate  1\n",
+            "role  Finance  evaluate  2\n",
+            "role  Kasir  evaluate  2\n",
+            "role  Resepsionis  evaluate  2\n",
+            "role  Pegawai_Lapangan  evaluate  2\n",
+            "role  Pelanggan  evaluate  2\n",
             "✅ Passed: Semua role dimiliki minimal oleh satu user.\n"
           ]
         }
@@ -491,9 +488,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XOP1jBT1VQhl",
-        "outputId": "784b8306-6953-46fd-839b-2aa3e73fbe55"
+        "outputId": "ab3e3d44-12d3-44c9-c26e-20f02a5cacba"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -540,9 +537,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eKK1eF5BYTV-",
-        "outputId": "9c60e4e0-c39a-47f8-b4bd-c9d3a5bb88c7"
+        "outputId": "cf8e9614-9505-46d5-cce2-1a627e355a36"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -552,13 +549,13 @@
             " OP_07\n",
             "\n",
             "🔍 Checking constraint: Role yang memiliki permission Update harus memiliki permission Read untuk objek terkait\n",
-            "Superadmin: R, User, U, Role, U, Permission, U, User, D, Role, R, Permission, R, Customer, Impersonate, Kasir, D, Role_Perm, Impersonate, Resepsionis, R, Role_Perm, C, Permission, C, Role_Perm, C, User, C, Bill, R, Role, Impersonate, Pegawai_Lapangan, R, MeterReading, C, Role, Impersonate, Finance, Impersonate, Direktur, D, Permission\n",
-            "Direktur: R, Journal, R, User, R, COA, R, MeterReading, U, Journal, R, Bill, C, Journal, R, FinancialReport, R, Customer, U, Bill\n",
-            "Finance: R, Journal, R, User, U, COA, R, COA, U, Journal, C, Journal, C, COA\n",
-            "Kasir: R, Journal, R, User, R, COA, R, MeterReading, U, Journal, R, Bill, C, Journal, R, Customer, U, Bill\n",
-            "Resepsionis: R, User, R, MeterReading, U, HousingArea, C, Customer, R, Bill, R, Customer, U, Customer, R, HousingArea, C, HousingArea\n",
-            "Pegawai_Lapangan: R, MeterReading, C, MeterReading, R, Bill, R, Customer, U, MeterReading\n",
-            "Pelanggan: R, Bill, R, Customer, R, MeterReading\n",
+            "Superadmin: U, User, C, Role, D, Role_Perm, D, Role, C, Role_Perm, R, Permission, C, Bill, R, MeterReading, C, Permission, Impersonate, Pegawai_Lapangan, R, Role_Perm, U, Permission, R, User, D, Permission, Impersonate, Kasir, R, Role, Impersonate, Direktur, Impersonate, Finance, Impersonate, Resepsionis, C, User, U, Role, R, Customer\n",
+            "Direktur: R, FinancialReport, C, Journal, R, Bill, U, Bill, R, User, R, Journal, R, MeterReading, U, Journal, R, Customer, R, COA\n",
+            "Finance: C, Journal, U, COA, C, COA, R, User, R, Journal, U, Journal, R, COA\n",
+            "Kasir: C, Journal, R, Bill, U, Bill, R, User, R, Journal, R, MeterReading, U, Journal, R, Customer, R, COA\n",
+            "Resepsionis: U, Customer, R, Bill, C, HousingArea, U, HousingArea, R, HousingArea, R, User, R, MeterReading, C, Customer, R, Customer\n",
+            "Pegawai_Lapangan: R, Bill, U, MeterReading, C, MeterReading, R, MeterReading, R, Customer\n",
+            "Pelanggan: R, MeterReading, R, Customer, R, Bill\n",
             "role  Direktur  action  U  resource  Journal\n",
             "role  Direktur  action  U  resource  Bill\n",
             "role  Resepsionis  action  U  resource  Customer\n",
