--- a/PENGUJIAN_MODEL.ipynb
+++ b/PENGUJIAN_MODEL.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN3fC06D3+ohVriOCxjLOFN",
+      "authorship_tag": "ABX9TyNaflAIcR7Jf/vkXDRzXXx8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XlsNI_0j-V1L",
-        "outputId": "41072e10-52b9-4b3f-ce3d-6e734e36eaf1"
+        "outputId": "859c8728-2d78-4fef-a0b3-1d6780d0cdf7"
       },
       "outputs": [
         {
@@ -44,7 +44,7 @@
             "Collecting z3-solver\n",
             "  Downloading z3_solver-4.15.0.0-py3-none-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (602 bytes)\n",
             "Downloading z3_solver-4.15.0.0-py3-none-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (29.5 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m29.5/29.5 MB\u001b[0m \u001b[31m25.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m29.5/29.5 MB\u001b[0m \u001b[31m23.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hInstalling collected packages: z3-solver\n",
             "Successfully installed z3-solver-4.15.0.0\n"
           ]
@@ -89,7 +89,6 @@
         "\n",
         "# === Step 2: Function untuk permission dan inheritance ===\n",
         "has_permission = Function(\"has_permission\", Roles, Actions, Objects, BoolSort())\n",
-        "inherits = Function(\"inherits\", Roles, Roles, BoolSort())\n",
         "has_role = Function(\"has_role\", Users, Roles, BoolSort())\n",
         "\n",
         "# === Step 3: Mapping string ke enum (biar gampang parsing) ===\n",
@@ -227,7 +226,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5awMJc5m8pIa",
-        "outputId": "26af8026-b811-48d5-84a8-39d3563e48c2"
+        "outputId": "f9878457-c729-4717-8fe4-32dce0086c16"
       },
       "execution_count": 4,
       "outputs": [
@@ -245,12 +244,11 @@
     {
       "cell_type": "code",
       "source": [
+        "print(\"\\n SOD_01\")\n",
+        "print(\"\\n🔍 Checking constraint: Tidak boleh ada role apa pun yang memiliki dua atau lebih dari permission {C, MeterReading}, {C, Bill}, dan {C, Journal}\")\n",
+        "\n",
         "s.push()\n",
         "\n",
-        "# for u in users:\n",
-        "#     s.add(Sum([If(has_role(u, r), 1, 0) for r in roles]) == 1)\n",
-        "\n",
-        "# Example assignments (customize as needed)\n",
         "s.add(has_role(u1, Superadmin) == True)\n",
         "s.add(has_role(u2, Direktur) == True)\n",
         "s.add(has_role(u3, Finance) == True)\n",
@@ -279,9 +277,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QlJ_51QCmC3I",
-        "outputId": "cc9bef70-5453-4fe9-e555-8b508c28a395"
+        "outputId": "c9869c23-6dd8-42de-a50c-398aefdddf6d"
       },
-      "execution_count": 5,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -326,9 +324,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3e084b9a-9a89-41fb-9cbd-617bcfcf7889"
+        "outputId": "61a81675-2d4e-4fef-f643-8b8fd95aee80"
       },
-      "execution_count": 6,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -364,9 +362,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5BpI56jyVj_c",
-        "outputId": "24351ad8-8842-476e-ac64-3c178509f20d"
+        "outputId": "13be2412-2693-44de-9a71-843d27c93091"
       },
-      "execution_count": 7,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -377,31 +375,6 @@
             "\n",
             "🔍 Checking constraint: hanya satu Superadmin\n",
             "✅ Passed: Hanya satu Superadmin.\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "tsag9cu5v5cl",
-        "outputId": "3bf05986-bce8-49bd-a3a4-954b68039f08"
-      },
-      "execution_count": 8,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\n",
-            " CA_02\n",
-            "\n",
-            "🔍 Checking constraint: tiap role minimal satu user\n",
-            "❌ Failed: Ada role yang tidak dimiliki oleh user mana pun.\n"
           ]
         }
       ]
@@ -426,16 +399,16 @@
         "    print(\"✅ Passed: Semua role dimiliki minimal oleh satu user.\")\n",
         "else:\n",
         "    print(\"❌ Failed: Ada role yang tidak dimiliki oleh user mana pun.\")\n",
-        "s.pop()"
+        "# s.pop()"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "A64lA3bYMMZK",
-        "outputId": "24d2cabd-b291-489f-fe48-35f99ff99642"
+        "outputId": "438aa61e-7eef-4ea0-873d-daacaacdfb0e"
       },
-      "execution_count": 8,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -488,9 +461,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XOP1jBT1VQhl",
-        "outputId": "ab3e3d44-12d3-44c9-c26e-20f02a5cacba"
+        "outputId": "b66c2e81-87b9-4ec9-fe15-3d17663108b3"
       },
-      "execution_count": 9,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -537,9 +510,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eKK1eF5BYTV-",
-        "outputId": "cf8e9614-9505-46d5-cce2-1a627e355a36"
+        "outputId": "4af499b2-de33-40cb-fd82-13954a4f30dc"
       },
-      "execution_count": 10,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -549,13 +522,13 @@
             " OP_07\n",
             "\n",
             "🔍 Checking constraint: Role yang memiliki permission Update harus memiliki permission Read untuk objek terkait\n",
-            "Superadmin: U, User, C, Role, D, Role_Perm, D, Role, C, Role_Perm, R, Permission, C, Bill, R, MeterReading, C, Permission, Impersonate, Pegawai_Lapangan, R, Role_Perm, U, Permission, R, User, D, Permission, Impersonate, Kasir, R, Role, Impersonate, Direktur, Impersonate, Finance, Impersonate, Resepsionis, C, User, U, Role, R, Customer\n",
-            "Direktur: R, FinancialReport, C, Journal, R, Bill, U, Bill, R, User, R, Journal, R, MeterReading, U, Journal, R, Customer, R, COA\n",
-            "Finance: C, Journal, U, COA, C, COA, R, User, R, Journal, U, Journal, R, COA\n",
-            "Kasir: C, Journal, R, Bill, U, Bill, R, User, R, Journal, R, MeterReading, U, Journal, R, Customer, R, COA\n",
-            "Resepsionis: U, Customer, R, Bill, C, HousingArea, U, HousingArea, R, HousingArea, R, User, R, MeterReading, C, Customer, R, Customer\n",
-            "Pegawai_Lapangan: R, Bill, U, MeterReading, C, MeterReading, R, MeterReading, R, Customer\n",
-            "Pelanggan: R, MeterReading, R, Customer, R, Bill\n",
+            "Superadmin: R, Role, Impersonate, Direktur, Impersonate, Kasir, R, User, C, Permission, C, Bill, C, Role, R, Permission, D, Permission, Impersonate, Resepsionis, R, Role_Perm, D, Role_Perm, C, Role_Perm, Impersonate, Pegawai_Lapangan, Impersonate, Finance, R, MeterReading, U, Permission, U, User, C, User, D, Role, U, Role, R, Customer\n",
+            "Direktur: U, Journal, R, Bill, R, Customer, C, Journal, R, User, R, COA, R, FinancialReport, U, Bill, R, Journal, R, MeterReading\n",
+            "Finance: U, Journal, C, Journal, R, COA, R, User, C, COA, U, COA, R, Journal\n",
+            "Kasir: U, Journal, R, Bill, R, Customer, C, Journal, R, COA, R, User, U, Bill, R, Journal, R, MeterReading\n",
+            "Resepsionis: C, Customer, R, Bill, R, HousingArea, C, HousingArea, R, User, U, Customer, U, HousingArea, R, Customer, R, MeterReading\n",
+            "Pegawai_Lapangan: U, MeterReading, R, Bill, R, Customer, R, MeterReading, C, MeterReading\n",
+            "Pelanggan: R, Bill, R, Customer, R, MeterReading\n",
             "role  Direktur  action  U  resource  Journal\n",
             "role  Direktur  action  U  resource  Bill\n",
             "role  Resepsionis  action  U  resource  Customer\n",
